AppInmobiliaria/force-app/main/default/objects/Location_Mapping__mdt/Location_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Location Mapping</label>
    <pluralLabel>Location Mappings</pluralLabel>
</CustomObject>