AppInmobiliaria/force-app/main/default/objects/Location_Mapping__mdt/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>