AppInmobiliaria/force-app/main/default/objects/Location_Mapping__mdt/fields/Location_Value__c.field-meta.xml
<CustomField>
    <fullName>Location_Value__c</fullName>
    <label>Location Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>