AppInmobiliaria/force-app/main/default/objects/Location_Mapping__mdt/fields/Parent_Value__c.field-meta.xml
<CustomField>
    <fullName>Parent_Value__c</fullName>
    <label>Parent Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>